@@ -8,10 +8,8 @@
 package org.elasticsearch.xpack.core.security.action.apikey;
 
 import org.elasticsearch.action.ActionResponse;
-import org.elasticsearch.common.io.stream.StreamInput;
+import org.elasticsearch.action.support.TransportAction;
 import org.elasticsearch.common.io.stream.StreamOutput;
-import org.elasticsearch.common.io.stream.Writeable;
-import org.elasticsearch.common.lucene.Lucene;
 import org.elasticsearch.core.Nullable;
 import org.elasticsearch.xcontent.ToXContentObject;
 import org.elasticsearch.xcontent.XContentBuilder;
@@ -19,23 +17,17 @@ import org.elasticsearch.xcontent.XContentBuilder;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 
 /**
  * Response for search API keys.<br>
  * The result contains information about the API keys that were found.
  */
-public final class QueryApiKeyResponse extends ActionResponse implements ToXContentObject, Writeable {
+public final class QueryApiKeyResponse extends ActionResponse implements ToXContentObject {
 
     private final long total;
     private final Item[] items;
-
-    public QueryApiKeyResponse(StreamInput in) throws IOException {
-        super(in);
-        this.total = in.readLong();
-        this.items = in.readArray(Item::new, Item[]::new);
-    }
 
     public QueryApiKeyResponse(long total, Collection<Item> items) {
         this.total = total;
@@ -44,7 +36,7 @@ public final class QueryApiKeyResponse extends ActionResponse implements ToXCont
     }
 
     public static QueryApiKeyResponse emptyResponse() {
-        return new QueryApiKeyResponse(0, Collections.emptyList());
+        return new QueryApiKeyResponse(0, List.of());
     }
 
     public long getTotal() {
@@ -67,8 +59,7 @@ public final class QueryApiKeyResponse extends ActionResponse implements ToXCont
 
     @Override
     public void writeTo(StreamOutput out) throws IOException {
-        out.writeLong(total);
-        out.writeArray(items);
+        TransportAction.localOnly();
     }
 
     @Override
@@ -91,7 +82,7 @@ public final class QueryApiKeyResponse extends ActionResponse implements ToXCont
         return "QueryApiKeyResponse{" + "total=" + total + ", items=" + Arrays.toString(items) + '}';
     }
 
-    public static class Item implements ToXContentObject, Writeable {
+    public static class Item implements ToXContentObject {
         private final ApiKey apiKey;
         @Nullable
         private final Object[] sortValues;
@@ -101,23 +92,12 @@ public final class QueryApiKeyResponse extends ActionResponse implements ToXCont
             this.sortValues = sortValues;
         }
 
-        public Item(StreamInput in) throws IOException {
-            this.apiKey = new ApiKey(in);
-            this.sortValues = in.readOptionalArray(Lucene::readSortValue, Object[]::new);
-        }
-
         public ApiKey getApiKey() {
             return apiKey;
         }
 
         public Object[] getSortValues() {
             return sortValues;
-        }
-
-        @Override
-        public void writeTo(StreamOutput out) throws IOException {
-            apiKey.writeTo(out);
-            out.writeOptionalArray(Lucene::writeSortValue, sortValues);
         }
 
         @Override
